Fix Horizontal Scrollbar

--- a/dev/scss/article.scss
+++ b/dev/scss/article.scss
@@ -620,7 +620,7 @@
     }
     @media #{$mq_md} {
       bottom: 0;
-      right: -1%;
+      right: 0;
     }
   }
 
